--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^1.8.0"
+    "@astrojs/solid-js": "^1.2.3",
+    "astro": "^1.8.0",
+    "solid-js": "^1.4.3"
   }
 }
