--- a/package.json
+++ b/package.json
@@ -1,18 +1,40 @@
 {
-  "name": "@example/minimal",
-  "type": "module",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/solid-js": "^1.2.3",
-    "astro": "^1.8.0",
-    "solid-js": "^1.4.3"
-  }
+	"name": "@example/minimal",
+	"type": "module",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "astro dev",
+		"start": "astro dev",
+		"build": "astro build",
+		"preview": "astro preview",
+		"astro": "astro",
+		"format": "prettier --write ."
+	},
+	"dependencies": {
+		"@astrojs/solid-js": "^1.2.3",
+		"@fontsource/space-grotesk": "^4.5.10",
+		"astro": "^1.8.0",
+		"solid-js": "^1.4.3"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.20.7",
+		"@iconify-json/fluent": "^1.1.17",
+		"@typescript-eslint/eslint-plugin": "^5.47.1",
+		"@typescript-eslint/parser": "^5.47.1",
+		"autoprefixer": "^10.4.13",
+		"cssnano": "^5.1.14",
+		"eslint": "^8.30.0",
+		"postcss": "^8.4.20",
+		"prettier": "^2.8.1",
+		"prettier-plugin-astro": "^0.7.0",
+		"sass": "^1.57.1",
+		"typescript": "^4.9.4",
+		"unplugin-icons": "^0.14.15"
+	},
+	"peerDependencies": {
+		"@babel/core": "^7.20.7",
+		"postcss": "^8.4.20",
+		"typescript": "^4.9.4"
+	}
 }
