--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"build": "astro build",
 		"preview": "astro preview",
 		"astro": "astro",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"test": "vitest run --coverage"
 	},
 	"dependencies": {
 		"@astrojs/solid-js": "^1.2.3",
