chore: setup actions

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"build": "astro build",
 		"preview": "astro preview",
 		"astro": "astro",
-		"format": "prettier --write .",
+		"format": "prettier --write **/*.{ts,astro,json,cjs,mjs}",
 		"test": "vitest run --coverage"
 	},
 	"dependencies": {
