--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
 		"@formkit/auto-animate": "1.0.0-beta.5",
 		"@solid-primitives/scheduled": "^1.2.1",
 		"astro": "^1.9.2",
+		"remark": "^14.0.2",
+		"remark-gfm": "^3.0.1",
+		"remark-html": "^15.0.1",
 		"solid-js": "^1.6.9",
 		"zod": "^3.20.2"
 	},
