--- a/package.json
+++ b/package.json
@@ -18,15 +18,14 @@
 		"@formkit/auto-animate": "1.0.0-beta.5",
 		"@solid-primitives/scheduled": "^1.2.1",
 		"astro": "^1.9.2",
-		"remark": "^14.0.2",
-		"remark-gfm": "^3.0.1",
-		"remark-html": "^15.0.1",
+		"flourite": "^1.2.2",
 		"solid-js": "^1.6.9",
 		"zod": "^3.20.2"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.12",
 		"@iconify-json/fluent": "^1.1.17",
+		"@stefanprobst/remark-shiki": "^2.2.0",
 		"@typescript-eslint/eslint-plugin": "^5.48.2",
 		"@typescript-eslint/parser": "^5.48.2",
 		"@vitest/coverage-c8": "^0.27.2",
@@ -36,8 +35,16 @@
 		"postcss": "^8.4.21",
 		"prettier": "^2.8.3",
 		"prettier-plugin-astro": "^0.7.2",
+		"rehype-raw": "^6.1.1",
+		"rehype-stringify": "^9.0.3",
+		"remark-gfm": "^3.0.1",
+		"remark-html": "^15.0.1",
+		"remark-parse": "^10.0.1",
+		"remark-rehype": "^10.1.0",
 		"sass": "^1.57.1",
+		"shiki": "^0.12.1",
 		"typescript": "^4.9.4",
+		"unified": "^10.1.2",
 		"unplugin-icons": "^0.15.1",
 		"vitest": "^0.27.2"
 	},
