--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
 	},
 	"dependencies": {
 		"@astrojs/solid-js": "^1.2.3",
+		"@fontsource/jetbrains-mono": "^4.5.12",
 		"@fontsource/space-grotesk": "^4.5.13",
+		"@fontsource/unbounded": "^4.5.1",
 		"@formkit/auto-animate": "1.0.0-beta.5",
 		"@solid-primitives/scheduled": "^1.2.1",
 		"astro": "^1.9.2",
