--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 	"devDependencies": {
 		"@babel/core": "^7.20.12",
 		"@iconify-json/fluent": "^1.1.17",
-		"@stefanprobst/remark-shiki": "^2.2.0",
+		"@leafac/rehype-shiki": "^2.2.1",
 		"@typescript-eslint/eslint-plugin": "^5.48.2",
 		"@typescript-eslint/parser": "^5.48.2",
 		"@vitest/coverage-c8": "^0.27.2",
@@ -39,6 +39,7 @@
 		"prettier-plugin-astro": "^0.7.2",
 		"rehype-raw": "^6.1.1",
 		"rehype-stringify": "^9.0.3",
+		"remark-breaks": "^3.0.2",
 		"remark-gfm": "^3.0.1",
 		"remark-html": "^15.0.1",
 		"remark-parse": "^10.0.1",
@@ -53,6 +54,7 @@
 	"peerDependencies": {
 		"@babel/core": "^7.20.7",
 		"postcss": "^8.4.20",
+		"shiki": "^0.12.1",
 		"typescript": "^4.9.4"
 	}
 }
