--- a/package.json
+++ b/package.json
@@ -17,26 +17,26 @@
 		"@fontsource/jetbrains-mono": "^5.0.5",
 		"@fontsource/space-grotesk": "^5.0.5",
 		"@fontsource/unbounded": "^5.0.5",
-		"@formkit/auto-animate": "1.0.0-beta.5",
+		"@formkit/auto-animate": "1.0.0-pre-alpha.3",
 		"@solid-primitives/scheduled": "^1.3.2",
-		"astro": "^2.8.0",
+		"astro": "^2.8.3",
 		"flourite": "^1.2.4",
-		"solid-js": "^1.7.7",
+		"solid-js": "^1.7.8",
 		"zod": "^3.21.4"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.22.8",
-		"@iconify-json/fluent": "^1.1.26",
+		"@babel/core": "^7.22.9",
+		"@iconify-json/fluent": "^1.1.27",
 		"@leafac/rehype-shiki": "^2.2.1",
-		"@typescript-eslint/eslint-plugin": "^5.61.0",
-		"@typescript-eslint/parser": "^5.61.0",
-		"@vitest/coverage-c8": "^0.33.0",
+		"@typescript-eslint/eslint-plugin": "^5.62.0",
+		"@typescript-eslint/parser": "^5.62.0",
+		"@vitest/coverage-v8": "^0.33.0",
 		"autoprefixer": "^10.4.14",
 		"cssnano": "^6.0.1",
-		"eslint": "^8.44.0",
-		"postcss": "^8.4.25",
+		"eslint": "^8.45.0",
+		"postcss": "^8.4.26",
 		"prettier": "^3.0.0",
-		"prettier-plugin-astro": "^0.10.0",
+		"prettier-plugin-astro": "^0.11.0",
 		"rehype-raw": "^6.1.1",
 		"rehype-stringify": "^9.0.3",
 		"remark-breaks": "^3.0.3",
@@ -48,7 +48,7 @@
 		"shiki": "^0.14.3",
 		"typescript": "^5.1.6",
 		"unified": "^10.1.2",
-		"unplugin-icons": "^0.16.3",
+		"unplugin-icons": "^0.16.5",
 		"vitest": "^0.33.0"
 	},
 	"peerDependencies": {
