--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -7,22 +7,11 @@ jobs:
   ci:
     name: CI
     runs-on: ubuntu-latest
-    container: node:18-bullseye
+    container: node:20-bookworm
     timeout-minutes: 30
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: TruffleHog OSS
-        uses: trufflesecurity/trufflehog@main
-        continue-on-error: true
-        with:
-          path: ./
-          base: ${{ github.event.repository.default_branch }}
-          head: HEAD
-          extra_args: --debug --only-verified
+        uses: actions/checkout@v4
 
       - name: Setup tzdata
         run: apt-get update -y && apt-get upgrade -y && apt-get install -y tzdata
