--- a/package.json
+++ b/package.json
@@ -13,15 +13,26 @@
 		"test": "vitest run --coverage"
 	},
 	"dependencies": {
-		"@astrojs/solid-js": "^3.0.0",
+		"@astrojs/node": "^8.2.3",
+		"@astrojs/solid-js": "^4.0.1",
 		"@fontsource/jetbrains-mono": "^5.0.11",
 		"@fontsource/space-grotesk": "^5.0.8",
 		"@fontsource/unbounded": "^5.0.11",
 		"@formkit/auto-animate": "1.0.0-pre-alpha.3",
+		"@sentry/astro": "^7.106.1",
 		"@solid-primitives/scheduled": "^1.4.1",
-		"astro": "^3.0.3",
+		"astro": "^4.5.1",
 		"flourite": "^1.2.4",
-		"solid-js": "^1.7.11",
+		"rehype-raw": "^7.0.0",
+		"rehype-stringify": "^10.0.0",
+		"remark-breaks": "^3.0.3",
+		"remark-gfm": "^3.0.1",
+		"remark-html": "^15.0.2",
+		"remark-parse": "^10.0.2",
+		"remark-rehype": "^10.1.0",
+		"shiki": "^0.14.3",
+		"solid-js": "^1.8.15",
+		"unified": "^11.0.2",
 		"zod": "^3.22.2"
 	},
 	"devDependencies": {
@@ -37,24 +48,16 @@
 		"postcss": "^8.4.29",
 		"prettier": "^3.0.3",
 		"prettier-plugin-astro": "^0.12.0",
-		"rehype-raw": "^7.0.0",
-		"rehype-stringify": "^10.0.0",
-		"remark-breaks": "^3.0.3",
-		"remark-gfm": "^3.0.1",
-		"remark-html": "^15.0.2",
-		"remark-parse": "^10.0.2",
-		"remark-rehype": "^10.1.0",
 		"sass": "^1.66.1",
-		"shiki": "^0.14.3",
 		"typescript": "^5.2.2",
-		"unified": "^11.0.2",
 		"unplugin-icons": "^0.16.6",
+		"vite-plugin-static-copy": "^1.0.1",
 		"vitest": "^0.34.3"
 	},
 	"peerDependencies": {
 		"@babel/core": "^7.20.7",
 		"postcss": "^8.4.20",
-		"shiki": "^0.12.1",
+		"shiki": "^0.11.1",
 		"typescript": "^4.9.4"
 	}
 }
